<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A1F43"
    tools:context=".representation.activities.WalletFragment">

    <TextView
        android:id="@+id/titleText_activity_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallet_activity_title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="370dp"
        android:layout_height="275dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText_activity_track">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearlayout_section1"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_cost_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/cardview_totalcost"
                    android:textColor="#505050"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView_cost_value"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="367dp"
                android:layout_height="1dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#505050" />

            <LinearLayout
                android:id="@+id/linearlayout_section2"
                android:layout_width="match_parent"
                android:layout_height="101dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_profit_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/cardview_totalprofit"
                    android:textColor="#505050"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView_profit_value"
                    android:layout_width="369dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="367dp"
                android:layout_height="1dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#505050" />

            <LinearLayout
                android:id="@+id/linearlayout_section3"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/addButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="45dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_orange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_add" />

                <ImageButton
                    android:id="@+id/removeButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/button_orange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_remove" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView_activity_wallet"
        android:layout_width="372dp"
        android:layout_height="241dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />
    <ImageButton
        android:id="@+id/trackButton"
        android:layout_width="55dp"
        android:layout_height="53dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_track" />

    <Button
        android:id="@+id/button_test1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="test1"
        app:layout_constraintStart_toEndOf="@+id/trackButton"
        tools:layout_editor_absoluteY="647dp" />

</androidx.constraintlayout.widget.ConstraintLayout>